02 add: 그림검사 목록/상세/작성

--- a/css/styles.css
+++ b/css/styles.css
@@ -304,8 +304,18 @@ header .util a:last-of-type {
     width: 40px;
 }
 
+.sub .main-title h2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 .sub .main-title h2 span {
     font-size: 1.4rem;
+}
+
+.sub .main-title h2 .description {
+    font-weight: normal;
 }
 
 /* psy-check */
@@ -461,6 +471,9 @@ header .util a:last-of-type {
 .image-test {
     margin-bottom: 100px;
 }
+.sub .image-test {
+    margin-bottom: 60px;
+}
 
 .sub .image-test .container {
     width: 800px;
@@ -518,6 +531,29 @@ header .util a:last-of-type {
     color: #fff;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
     z-index: 2;
+}
+
+.images input[type=file] {
+    display: none;
+}
+
+.images.js-upload-image .upload-button {
+    background-color: #f7f7f7;
+    padding: 20px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
+    text-align: center;
+    cursor: pointer;
+}
+.images.js-upload-image .upload-button p {
+    color: #999;
+}
+.images.js-upload-image .upload-button p b {
+    display: block;
+    font-size: 1.3rem;
+    color: #333;
 }
 
 /* maum-manual */
@@ -731,53 +767,68 @@ header .util a:last-of-type {
     color: #000;
 }
 
-/* post-detail */
-.post-detail {
+/* post */
+.post-detail,
+.post-write {
     padding: 20px;
 }
-.post-detail .images {
+
+.post-detail .images,
+.post-write .images {
     display: flex;
     justify-content: center;
     margin-bottom: 2rem;
 }
-.post-detail .images img {
+
+.post-detail .images img,
+.post-write .images img {
     display: block;
     max-width: 100%;
     border-radius: 20px;
 }
+
 .post-detail .body {
     margin-bottom: 2rem;
     color: #555;
 }
+
 .post-detail .bottom {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
 }
+
 .post-detail .bottom .info dt {
     color: #000;
 }
+
 .post-detail .bottom .info dd {
     color: #999;
     font-size: 13px;
 }
+
 .post-detail .bottom .likes {
     font-size: 1.2rem;
 }
+
 .post-detail .bottom .likes i,
 .comment-list .likes i {
     color: #ccc;
     margin-right: .3rem;
 }
+
 .post-detail .bottom .likes .like-count {
     color: #000;
 }
-.post-detail .buttons {
+
+.post-detail .buttons,
+.post-write .buttons {
     margin-top: 2rem;
     border-top: 1px solid #eee;
     padding-top: 2rem;
 }
+
 .post-detail .buttons .is-edit {
     margin-left: 30px !important;
 }
@@ -790,10 +841,12 @@ header .util a:last-of-type {
 .comments {
     padding: 20px;
 }
+
 .comments h3 {
     display: flex;
     align-items: center;
 }
+
 .comments h3 .number {
     margin-left: .3rem;
     font-size: 1rem;
@@ -862,11 +915,13 @@ header .util a:last-of-type {
     width: 100%;
     height: 100%;
 }
+
 .comment-list .comment-top .button.likes {
     padding: 0 .5rem;
     height: 2rem;
     font-size: 14px;
 }
+
 .comment-list .comment-top .button.likes i {
     margin-right: 3px;
     /* color: #ddd; */
@@ -1132,6 +1187,7 @@ footer .go-top {
     opacity: 0;
     transition: opacity .3s;
 }
+
 footer .go-top::before {
     display: block;
     content: "\f062";
@@ -1139,6 +1195,7 @@ footer .go-top::before {
     font-weight: 900;
     font-size: 1.5rem;
 }
+
 footer .go-top.is-active {
     opacity: 1;
     cursor: pointer;
