--- a/css/mobile.css
+++ b/css/mobile.css
@@ -8,18 +8,21 @@
         flex-basis: 120px;
     }
 
-    header .main-menu>li> a {
+    header .main-menu>li>a {
         font-size: 1rem;
         line-height: 2;
     }
+
     header .sub-menu {
         width: 150px;
         left: 20px;
         top: 40px;
     }
+
     header .sub-menu a {
         padding: 5px 20px;
     }
+
     header .sub-menu span {
         font-size: 13px !important;
     }
@@ -32,6 +35,7 @@
         font-size: .8rem;
         margin-right: 10px;
     }
+
 }
 
 @media(max-width:768px) {
@@ -43,6 +47,7 @@
 
     header.is-fixed .container {
         position: fixed;
+        top: 0;
         background-color: #fff;
         box-shadow: 0 3px 10px rgba(20, 20, 20, .08);
         animation: headerIn .3s ease-out;
@@ -75,17 +80,22 @@
         padding-right: 10px;
     }
 
-    .index header .page-prev {
-        visibility: hidden;
-    }
-
-    header .logo {
+    .index header .logo {
         flex-basis: auto;
         height: 16px;
     }
 
+    header .logo {
+        flex-basis: auto;
+        height: auto;
+    }
+
     header .logo img {
         display: block;
+    }
+
+    header .logo .mobile-current-title {
+        font-weight: 600;
     }
 
     .mobile-menu {
@@ -239,6 +249,28 @@
         color: #000;
     }
 
+    .sub .main-title {
+        display: none;
+    }
+
+    .sub .image-test .container {
+        width: 100%;
+    }
+
+    .top-bar {
+        flex-direction: column;
+        margin: 2rem 0;
+    }
+
+    .top-bar .buttons {
+        margin-top: 20px;
+        justify-content: center;
+    }
+
+    .top-bar .description {
+        font-size: 1.2rem;
+    }
+
     .main .swiper-container {
         padding-top: 30px;
         padding-bottom: 30px;
@@ -288,7 +320,8 @@
         margin-bottom: 2rem;
     }
 
-    .main section:not(.slider-banner) .container {
+    .main section:not(.slider-banner) .container,
+    .sub section:not(.slider-banner) .container {
         padding: 20px;
     }
 
@@ -327,22 +360,30 @@
         margin: 3px;
     }
 
-    .main .image-test .image-list {
+    .image-test .image-list {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 30vw);
+        grid-auto-rows: 30vw;
         gap: 10px;
     }
 
-    .main .image-test .image-list li {
+    .image-test .image-list li {
         width: auto;
         margin: 0;
     }
 
-    .main .image-test .image-list li span {
+    .image-test .image-list li span {
         font-size: .7rem;
         bottom: 6px;
         left: 10px;
+    }
+
+    .image-list+.buttons {
+        margin-top: 30px;
+    }
+
+    .image-list+.buttons .button {
+        width: 100%;
     }
 
     .main .manual-list {
@@ -409,6 +450,39 @@
 
     .main .relaxation .content-list dl dd {
         font-size: .7rem;
+    }
+
+    .post-detail,
+    .post-write {
+        padding: 0;
+    }
+
+    .comments {
+        padding: 0;
+        margin-top: 50px;
+    }
+
+    .post-detail .images,
+    .post-write .images {
+        margin-bottom: 1rem;
+    }
+
+    .images.js-upload-image .upload-button {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .images.js-upload-image .upload-button img {
+        width: 3rem;
+        object-fit: contain;
+    }
+
+    .images.js-upload-image .upload-button p {
+        font-size: 12px;
+    }
+
+    .images.js-upload-image .upload-button p b {
+        font-size: 1rem;
     }
 
     .fullwidth-banner .container {
