05 edit: index에서 page-prev요소 숨기기

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -76,6 +76,10 @@
         font-size: 1.2rem;
     }
 
+    .index header .page-prev {
+        visibility: hidden;
+    }
+
     header .page-prev {
         padding-right: 10px;
     }
